# star-scraper

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yml
scripts/: export_db_dump.py
sql/: schema.sql
src/github_star_crawler/: __init__.py  config.py  crawler.py  db.py  github_client.py  main.py  partitioning.py
