[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-star-crawler"
version = "0.1.0"
description = "GitHub GraphQL crawler for repository star snapshots"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]
